: Version 0.3.0
    - Total allocation mode available on GUI. Player is requested to put down 
      all his/her pieces on a custom-size board playing against no opponent
    - Major refactoring on GUI handling. New games can be added easier into 
      the Main Window. New Game dialog redesigned too.
    - New configuration file in xml format which is loaded at start-up. At the
      moment it is only used to set the language on windows platforms but it 
      could be easily expanded in future
    - Format of blockem challenges has been designed. Next version (0.3.1) is 
      expected to add support to play these challenges on the GUI
    - Bug fixed in win32 platforms: Bogus handling of i18n in command line 
      arguments

28/08/2010: Version 0.2.4
    - About Dialog contains the URL of the project
    - Support for internationalization. Available languages for now are English
      and Spanish

19/07/2010: Version 0.2.3
    - Around 20% performance improvement of Minimax algorithm since 0.2.2
      using precalculated arrays of nucleation points and forbidden areas
      as well as piece configurations. Loops have been also fine tuned to
      loop as fewer times as possible
    - Improved command line options. backtracking algorithm to deploy all
      pieces in an empty board (1 player total allocation game) can be tested
      through command line, for example with this command:
          ./blockem --mode=1 -r 14 -c 14 -x 4 -y 4
    - Test app has been extended to check whether changes added to the
      sourcebase insert regressions in blockem. Also, Makefile.am for
      test app has been fixed so it only uses libraries for test, instead
      of all libraries needed for the blockem app

21/06/2010: Version 0.2.2
    - Code adapted to be able to run with glib >= 2.24 (included in ubuntu
      10.4). Earlier versions couldn't run with that library version due to
      the following error: 