@@ -22,8 +22,5 @@ supposed to be integrated in blockem at some point in the future:
    pieces. There's already some code done but it is too slow
  + Add default button to the new/config dialog
  + Convert std::lists to standard arrays in Piece
- + i18n fix in windows. Language is hardcoded in main.cpp. It should be 
-   possible to change the language at running time instead of compiling
-   blockem as many times as languages are supported
  + cachegrind to profile (instead of gprof)
  + complete rules_test
