@@ -1,6 +1,9 @@
 : Version 0.3.0
     - Total allocation mode available on GUI. Player is requested to put down 
       all his/her pieces on a custom-size board playing against no opponent
+    - Tooltip with each piece's name has been added to the available pieces 
+      shown to the user. It is shown when the mouse is stopped over a currently
+      available piece
     - Major refactoring on GUI handling. New games can be added easier into 
       the Main Window. New Game dialog redesigned too.
     - New configuration file in xml format which is loaded at start-up. At the
